2002-01-03  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* tmda-filter: Replace tmda-filter with a wrapper script, and
	rename it 'tmda-rfilter'.

	(execdir): Import time only right before trying to log the
	exception so that TZ set in the tmdarc is honored.
	
2002-01-02  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* tmda-sendmail (usage): Remove the `-bs' option, since
	tmda-inject does not support it.

2002-01-01  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* tmda-filter (address_extension): If we are running a qmail
	virtualdomain, address_extension needs to have both the "prepend"
	and virtual username stripped off to be accurate.

	(verify_confirm_cookie): Now we also check whether the message
	actually exists in the pending queue before proceeding.

	(release_pending): Renamed locate_pending since we no longer check
	whether the message exists here.

	(inject_pending): Don't unlink the confirmed message yet, we need
	it around for verify_confirm_cookie to look for later on.

2001-12-27  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* tmda-filter (logit): Use Util.unixdate() for the Date: field.

	(inject_pending): Use Util.unixdate() for X-TMDA-Confirmed.

	* tmda-address: Rename tmda-make-address tmda-address.

2001-12-24  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* tmda-make-address: New program that replaces tmda-dated-address,
	tmda-keyword-address, and tmda-sender-address.

2001-12-20  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* tmda-filter: If SENDER or RECIPIENT is not in the environment,
	print a warning and raise an exception that defers delivery.

2001-12-19  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* tmda-filter (list_headers): Turn off auto-replies if the message
	contains any List-XXX: headers.

2001-12-17  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* tmda-filter (verify_keyword_cookie): Bugfix.  Wasn't able to