@@ -1,6 +1,8 @@
 2002-01-03  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* config-client.ht: Add nmh configuration information.
+	Programs should now add the `-n' option to prevent a newline
+	from being added.
 
 2001-12-31  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
